<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:clickable="true"
    android:focusable="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_6sdp"
        android:background="@drawable/bg_rectangle_gray_radius_24"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/_12sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_wifi_lost"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_80sdp"
            android:layout_marginTop="@dimen/_24dp"
            android:src="@drawable/ic_wifi_lost" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20dp"
            android:fontFamily="@font/inter"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/text_connection_lost"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/_18ssp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10dp"
            android:fontFamily="@font/inter"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/text_check_your_internet_connection_and_try_again"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp" />

        <FrameLayout
            android:id="@+id/buttonSetting"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_42sdp"
            android:layout_marginHorizontal="@dimen/_16dp"
            android:layout_marginTop="@dimen/_14sdp"
            android:layout_marginBottom="@dimen/_6sdp"
            android:background="@drawable/bg_button_ads"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth_percent="0.4">

            <hoang.dqm.codebase.ui.components.widgets.StrokedTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="@dimen/_16sdp"
                android:fontFamily="@font/inter"
                android:gravity="center"
                android:includeFontPadding="false"
                android:paddingHorizontal="@dimen/_2sdp"
                android:shadowRadius=".1"
                android:text="@string/text_setting"
                android:textColor="@color/white"
                android:textSize="@dimen/_18ssp"
            />
        </FrameLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>