<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_nav"
    android:gravity="center"
    android:orientation="horizontal"
    android:paddingHorizontal="@dimen/_8sdp"
    android:paddingVertical="@dimen/_8sdp">
    <View
        android:id="@+id/pillIndicator"
        android:layout_width="0dp"
        android:layout_height="@dimen/_20sdp"
        android:layout_gravity="center_vertical"
        android:background="@drawable/bg_nav_selected" />
    
    <LinearLayout
        android:id="@+id/navContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/navItem1"
            style="@style/NavItemStyle">

            <ImageView
                android:id="@+id/icon1"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:src="@drawable/ic_movie"
                app:tint="@android:color/white" />

            <TextView
                android:id="@+id/title1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/inter"
                android:lines="1"
                android:text="@string/text_movie"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_10ssp"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/navItem2"
            style="@style/NavItemStyle">

            <ImageView
                android:id="@+id/icon2"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:src="@drawable/ic_channel"
                app:tint="@android:color/white" />

            <TextView
                android:id="@+id/title2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/inter"
                android:lines="1"
                android:text="@string/text_live"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_10ssp"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/navItem3"
            style="@style/NavItemStyle">

            <ImageView
                android:id="@+id/icon3"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:src="@drawable/ic_search"
                app:tint="@android:color/white" />

            <TextView
                android:id="@+id/title3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:lines="1"
                android:fontFamily="@font/inter"
                android:text="@string/text_search"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_10ssp"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/navItem4"
            style="@style/NavItemStyle">

            <ImageView
                android:id="@+id/icon4"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:src="@drawable/ic_favorite"
                app:tint="@color/white" />

            <TextView
                android:id="@+id/title4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/inter"
                android:lines="1"
                android:text="@string/text_search"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_10ssp"
                android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>